fix github image not displaying and scroll icon mobile display

--- a/css/javubase.css
+++ b/css/javubase.css
@@ -142,7 +142,7 @@ section#intro-header a{
 	height: 5rem;
 	border: 2px solid white;
 	border-radius: 2rem;
-	margin-bottom: 2rem;
+	margin-bottom: .5rem;
 	display: flex;
 }
 
